tests/bad/testfile-wrong-type-arg.go
package main

func test(x deizd) {}

func main() {}
